<resources>
    <string name="app_name">IHMA</string>

    <string name="travel_insurence">Travel Insurence</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="dashboard_fragment_label">Home</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="products_fragment_label">Products</string>
    <string name="splash_fragment_label">Splash</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="email">Email</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="mm">MM</string>
    <string name="dd">DD</string>
    <string name="yyyy">YYYY</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="civil_id">Civil ID</string>
    <string name="login_fingerprint_face_id">Login Fingerprint/ Face ID</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="travel_claims">Travel Claims</string>
    <string name="available_24hrs_7_days">Available 24Hrs ,/ 7 Days</string>
    <string name="comtact_no">Comtact No</string>
    <string name="dont_have_an_account">Dont have an account ?</string>
    <string name="login_as_guest">Login as Guest</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="login_fragment_label">Login</string>
    <string name="save">SAVE</string>
    <string name="buy_insurence">Buy Insurance</string>
    <string name="claims">Claims</string>
    <string name="motor_insurence">Motor Insurance</string>
    <string name="quote">Quote</string>
    <string name="renew">Renew</string>
    <string name="corporate_qoutes">Corporate Qoutes</string>
    <string name="hospital_network">Hospital Network</string>
    <string name="assistance_for_claim">Assistance for claim</string>
    <string name="login_or_register">Login or Register</string>
    <string name="loged_in_as_guest">Loged in as guest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password">Reset Password</string>
    <string name="fga_insurance">FGA Insurance</string>
    <string name="marine_insurence">Marine Insurance</string>
    <string name="login_or_register_first">To user this service ,you need to login or register first</string>
    <string name="courses">Homeopathy is a medical science developed by Dr. Samuel Hahnemann (1755-1843), a German physician.</string>
    <string name="search">Search</string>

    <string name="email_empty">Email Id should not be empty</string>
    <string name="username_empty">Username  should not be empty</string>
    <string name="invalid_email">Not a valid email id</string>
    <string name="invalid_regNo">Not a valid registration id</string>
    <string name="invalid_userId">Not a valid userId id</string>
    <string name="space_pasword">Password should not contain space</string>
    <string name="space_username">Username should not contain space</string>
    <string name="one_numeric">Password should contain at least one numeric value</string>
    <string name="at_least_one_alphabet">Password should contain at least one alphabet</string>
    <string name="password_length">Password should at least 6 letter long</string>
    <string name="password_no_empty">Password  should not be Empty </string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="login_failed">Login Failed</string>
    <string name="no_events">Events has no new Updates</string>
    <string name="no_flashnews">Flash News has no new Updates</string>
    <string name="no_notifications">Notifications has no new Updates</string>
    <string name="failed_events">Viewing Events Failed</string>
    <string name="failed_flashnews">Viewing Flash News Failed </string>
    <string name="failed_notifications">Viewing Notifications Failed </string>
    <string name="otp_sending_failed">OTP Sending Failed</string>
    <string name="otp_failed">Please ReEnter OTP</string>
    <string name="new_password">New Password</string>
    <string name="new_password2">New Password is</string>
    <string name="new_password3">Please use it for login</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="registration_failed_error">Please Re_enter another Registration No./Username.</string>
    <string name="ok">OK</string>
    <string name="no_interbnet">You are Offline, Try again later !!</string>
    <string name="name_empty">Name Cannot be empty</string>
    <string name="naem_alphabet_only">Name should contain alphabets only</string>
    <string name="invalid_phone">Invaild phone number</string>
    <string name="registration_success">Successfully Registered</string>
    <string name="aboutUs_T1">ABOUT IHMA</string>
    <string name="aboutUs_T2">REGISTER NUMBER: 64/04</string>
    <string name="aboutUs_T3">IHMA - The National Platform of Indian Homoeopaths is relentless in its efforts to raise the standards of Homoeopathic Education and Practice in India.</string>
    \n\n
    <string name="aboutUs_T3_extra">IHMA serve the human society by awarding the benefits of homoeopathic system of treatment to public, especially the low socio-economic groups by conducting regular medical camps and fight to maintain the honor and dignity of the profession. Conducts regular CMEs, leadership training programmes, faculty and clinical training , PSC, UPSC and PG Entrance coaching, conferences, newsletters and magazines along with integrated medical research.\n\n
        It has fought tooth and nail many absurd decisions of the authorities concerned and this way gained maximum acceptance among the homoeopathic community which is evident from the growth it achieved along the length and breadth of India.</string>

    <string name="aboutUs_T4">INTRODUCTION TO HOMOEOPATHY EDUCATIONAL SERIES</string>
    <string name="aboutUs_T5">Since its inception, IHMA took firm stand against the corruption and nepotism that were prevalent in the Central Council of Homoeopathy at the time. The corruptions were so gross that there were even vigilance cases against some of the top office bearers of the CCH. As a result of the complaints filed by the IHMA before the enquiry commission led by Honourable Justice Usha Verma, the then CCH were dismissed and new members were elected.</string>
    <string name="aboutUs_T6">HISTORY OF IHMA</string>
    <string name="aboutUs_T7">It has fought tooth and nail many absurd decisions of the authorities concerned and this way gained maximum acceptance among the homeopathic community which is evident from the growth.</string>
    <string name="chapters_in_kerala">To see more details..</string>
    <string name="gallery">IHMA GALLERY</string>

    <string name="ob_1">- To serve the human society by awarding the benefits of Homoeopathic System of treatment to public, especially the low socio-economic groups.</string>
    <string name="ob_2">- To improve the quality of Homoeopathic Medical Practice.</string>
    <string name="ob_3">- To improve the quality of Homoeopathic Medical Education.</string>
    <string name="ob_4">- To maintain the honour and dignity and to uphold the interest of the profession of Homoeopathic Practice and to promote cooperation amongst the members thereof.</string>
    <string name="ob_5">- To work for the abolition of fake Homoeopathic Practices.</string>
    <string name="ob_6">- To achieve welfare of qualified Homoeopathic Doctors.</string>
    <string name="ob_7">- To stand for integrated medical research in Homoeopathy.</string>
    <string name="ob_8">- To conduction medical camps, especially in epidemics affected areas.</string>
    <string name="ob_9">- To promote and advance Homoeopathic System of Medicine and allied sciences and to benefit and improve public health thereby.</string>

    <string name="policy1"><u>Terms and Conditions and Cancellation and Refund policy</u></string>
    <string name="policy2">The fees collected through this mobile application is for obtaining membership to IHMA, (Indian Homeopathic Medical Association), Kerala Chapter, subject to the membership policies and regulations of the IHMA.</string>
    <string name="policy3">There are 2 types of membership, as shown below:</string>
    <string name="policy4"> •	Annual and Lifetime</string>
    <string name="policy5"> •	Annual membership fee is Rs 400 and Lifetime fee is Rs 4000.</string>
    <string name="policy6">NB: Membership once awarded cannot be cancelled, and no refund is given for approved members as there is no cancellation of life membership.</string>
    <string name="policy7"><u>Refund terms:</u></string>
    <string name="policy8">Once the Admin verifies the membership application submitted, then the membership is granted, however if the application is rejected by the association, due to reasons whatsoever, the membership will not be awarded, and fee would be refunded to the applicantbank account within 21 working days.</string>
    <string name="policy9">Amount once paid through the payment gateway shall not be refunded other than in any of the following circumstances mentioned below:</string>
    <string name="policy10">a.	  Multiple times debiting of applicant’s Card/Bank Account due to technical error.</string>
    <string name="policy11">b.	Applicant’s account being debited with excess amount in a single transaction due to technical error. </string>
    <string name="policy12">2.	In such cases, excess amount excluding Payment Gateway charges would be refunded to the applicant.</string>
    <string name="policy13">3.	If payment being charged on the Customer’s Card/Bank Account but the Membership got rejected due to any reason, the fee would be refunded.</string>
    <string name="policy14">a.	The applicant will have to make an application(email) for refund along with the transaction number and original payment receipt if any generated at the time of making payments.</string>
    <string name="policy15">4.	Any grievance is payment can be notified with transaction date, amount, and reference number to the email secretary@ihmakerala.in.</string>

</resources>