<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.deltasoft.ihma.viewmodel.PrivacyPolicyViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".view.drawer.PrivacyPolicyFragment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/policy1"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/policy2"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/policy3"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/policy4"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/policy5"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/policy6"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/policy7"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/policy8"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/policy9"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/policy10"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/policy11"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/policy12"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/policy13"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/policy14"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/policy15"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>



</layout>