<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.ilaftalkful.ihma.viewmodel.JoinViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="25dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/aboutUs_T1">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:text="@string/aboutUs_T2">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/aboutUs_T3">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:text="@string/aboutUs_T4">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textStyle="normal"
                android:text="@string/aboutUs_T5">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="@string/aboutUs_T6">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/aboutUs_T7"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textStyle="normal">

            </TextView>



        </LinearLayout>
    </ScrollView>


</layout>