<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="fragment"
            type="com.deltasoft.ihma.view.home.HomeopathyFragment"/>

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                    android:layout_width="80dp"
                    android:src="@drawable/logo_new"
                    android:layout_gravity="center"
                    android:layout_height="80dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:text="IHMA"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:fontFamily="@font/dmsans_bold"
                    android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:text="Homeopathy - Objectives"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>



                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/ob_1"
                    android:textColor="@color/white"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/ob_2"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/ob_3"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/ob_4"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/ob_5"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/ob_6"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/ob_7"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/ob_8"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/ob_9"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </ScrollView>
</layout>
