<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.ilaftalkful.ihma.view.LoginViewModel" />
        <variable
            name="fragment"
            type="com.ilaftalkful.ihma.view.login.ResetPasswordFragment" />
    </data>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">





        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin_main"
            android:layout_marginRight="@dimen/margin_main"
            android:layout_marginTop="@dimen/margin_main"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reset_password"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:fontFamily="@font/dmsans_bold"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                />






        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/margin_main"
            android:layout_marginRight="@dimen/margin_main"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:gravity="center_vertical"
                    android:hint="@string/username" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="55dp"

                android:gravity="center"
                android:orientation="horizontal"

                android:layout_height="wrap_content">

                <TextView
                    android:theme="@style/AccentButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="15dp"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
            </LinearLayout>



        </LinearLayout>











    </LinearLayout>
</layout>
