<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/splash_fragment">
    <include app:graph="@navigation/nav_home_graph" />

    <fragment
        android:id="@+id/dashboard_fragment"
        android:name="com.deltasoft.ihma.view.bottomNavigation.DashBoardFragment"
        android:label="@string/dashboard_fragment_label"
        tools:layout="@layout/dashboard_fragment">

        <action
            android:id="@+id/action_dashboard_fragment_to_login_fragment"
            app:destination="@id/login_fragment"
            app:popUpTo="@id/nav_graph.xml"
            app:popUpToInclusive="true"/>

    </fragment>



    <fragment
        android:id="@+id/login_fragment"
        android:name="com.deltasoft.ihma.view.login.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/login_fragment">
        <action android:id="@+id/action_show_home_guest"
            app:destination="@id/dashboard_fragment"
            app:exitAnim="@anim/slide_out_left"
            app:enterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popUpToInclusive="true"
            app:popUpTo="@id/login_fragment"/>

        <action android:id="@+id/action_show_register"
            app:destination="@id/register_fragment"
            app:exitAnim="@anim/slide_out_left"
            app:enterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"/>

        <action android:id="@+id/action_show_login_to_getEmailFragment"
            app:destination="@id/enterEmailFragment"
            app:exitAnim="@anim/slide_out_left"
            app:enterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popUpToInclusive="true"
            app:popUpTo="@id/login_fragment"/>
    </fragment>

    <fragment
        android:id="@+id/splash_fragment"
        android:name="com.deltasoft.ihma.view.splash.SplashFragment"
        android:label="@string/splash_fragment_label"
        tools:layout="@layout/splash_fragment">


        <action android:id="@+id/action_show_login"
            app:destination="@id/login_fragment"
            app:exitAnim="@anim/slide_out_left"
            app:enterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popUpToInclusive="true"
            app:popUpTo="@id/splash_fragment"/>

        <action android:id="@+id/action_show_home_for_guest"
            app:destination="@id/dashboard_fragment"
            app:exitAnim="@anim/slide_out_left"
            app:enterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popUpToInclusive="true"
            app:popUpTo="@id/splash_fragment"/>
    </fragment>

    <fragment
        android:id="@+id/register_fragment"
        android:name="com.deltasoft.ihma.view.register.RegistrationFragment"
        android:label="@string/register"
        tools:layout="@layout/register_fragment">

        <action android:id="@+id/action_show_login_from_register"
            app:destination="@id/login_fragment"
            app:exitAnim="@anim/slide_out_left"
            app:enterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popUpToInclusive="true"
            app:popUpTo="@id/register_fragment"/>

    </fragment>
    <fragment
        android:id="@+id/forgetPasswordFragment"
        android:name="com.deltasoft.ihma.view.login.ForgetPasswordFragment"
        android:label="fragment_forget_password"
        tools:layout="@layout/fragment_forget_password" >

        <action android:id="@+id/action_forgetPasswordFragment_login"
            app:destination="@id/login_fragment"
            app:exitAnim="@anim/slide_out_left"
            app:enterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popUpToInclusive="true"
            app:popUpTo="@id/forgetPasswordFragment"/>
    </fragment>

    <fragment
        android:id="@+id/OTPFragment"
        android:name="com.deltasoft.ihma.view.login.OTPFragment"
        android:label="fragment_o_t_p"
        tools:layout="@layout/fragment_o_t_p">

    <action android:id="@+id/action_otp_forgetPasswordFragment"
        app:destination="@id/forgetPasswordFragment"
        app:exitAnim="@anim/slide_out_left"
        app:enterAnim="@anim/slide_in_right"
        app:popExitAnim="@anim/slide_out_right"
        app:popEnterAnim="@anim/slide_in_left"
        app:popUpToInclusive="true"
        app:popUpTo="@id/OTPFragment"/>
    </fragment>
    <fragment
        android:id="@+id/enterEmailFragment"
        android:name="com.deltasoft.ihma.view.login.EnterEmailFragment"
        android:label="fragment_enter_email"
        tools:layout="@layout/fragment_enter_email" >
    <action android:id="@+id/action_email_otpFragment"
        app:destination="@id/OTPFragment"
        app:exitAnim="@anim/slide_out_left"
        app:enterAnim="@anim/slide_in_right"
        app:popExitAnim="@anim/slide_out_right"
        app:popEnterAnim="@anim/slide_in_left"
        app:popUpToInclusive="true"
        app:popUpTo="@id/enterEmailFragment"/>
    </fragment>


</navigation>